--- a/Formação HTML e CSS/HTML5 e CSS3/Pages/Contato/contato.html
+++ b/Formação HTML e CSS/HTML5 e CSS3/Pages/Contato/contato.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="../../img/logo.png"></h1>
+            <h1><img src="../../img/logo.png" alt="logo da barbearia alura"></h1>
             <nav>
                 <ul>
                     <li><a href="../../index.html">Home</a></li>
@@ -26,19 +26,19 @@
     <main>
         <form>
             <label for="nomeSobrenome">Nome e Sobrenome</label>
-            <input type="text" id="nomeSobrenome"></input>
+            <input type="text" id="nomeSobrenome" class="input-padrao" required></input>
 
             <label for="email">Email</label>
-            <input type="text" id="email"></input>
+            <input type="email" id="email" class="input-padrao" required placeholder="exemplo@exemplo.com"></input>
 
             <label for="telefone">Telefone</label>
-            <input type="text" id="telefone"></input>
+            <input type="tel" id="telefone" class="input-padrao" required placeholder="(74) 99103-8103"></input>
 
             <label for="mensagem">Mensagem</label>
             <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
 
-            <div>
-                <p>Como prefere o nosso contato?</p>
+            <fieldset>
+                <legend>Como prefere o nosso contato?</legend>
                 <label for="radio-email">
                     <input type="radio" name="contato" value="email" id="radio-email">
                     Email
@@ -50,31 +50,55 @@
                 </label>
 
                 <label for="radio-whatsapp">
-                    <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
+                    <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>
                     WhatsApp
                 </label>
-            </div>
+            </fieldset>
 
-            <div>
-                <p>Qual horário prefere ser atendido?</p>
+            <fieldset>
+                <legend>Qual horário prefere ser atendido?</legend>
                 <select>
                     <option>Manhã</option>
                     <option>Tarde</option>
                     <option>Noite</option>
                 </select>
-            </div>
+            </fieldset>
 
             <label class="checkbox">
-                <input type="checkbox">
+                <input type="checkbox" checked>
                 Gostaria de receber nossas novidades por email?
             </label>
 
-            <input type="submit" value="Enviar"></input>
+            <input type="submit" value="Enviar" class="enviar"></input>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Segunda</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Quarta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                </tbody>
+            </table>
+            
         </form>
     </main>
 
     <footer>
-        <img src="../../img/logo-branco.png">
+        <img src="../../img/logo-branco.png" alt="logo da barbearia alura">
         <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
     </footer>
 
