--- a/Formação HTML e CSS/HTML5 e CSS3/index.html
+++ b/Formação HTML e CSS/HTML5 e CSS3/index.html
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<title>Barbearia Alura</title>
-		<link rel="stylesheet" href="style.css">
-	</head>
 
-	<body>
-		<header>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
-		</header>
-		<img id="banner" src="img/banner.jpg">
-		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
-	 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+<head>
+	<meta charset="UTF-8">
+	<title>Barbearia Alura</title>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="reset.css">
+</head>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+<body>
+
+	<header>
+		<div class="caixa">
+			<h1><img src="/img/logo.png"></h1>
+
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="/Pages/Produtos/produtos.html">Produtos</a></li>
+					<li><a href="/Pages/Contato/contato.html">Contato</a></li>
+				</ul>
+			</nav>
 		</div>
+	</header>
 
-		<div class="beneficios">
-			<h3 class="titulo-centralizado">Benefícios</h3>
+	<img class="banner" src="/img/banner.jpg">
+
+	<main>
+
+		<section class="principal">
+			<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+
+			<img class="utensilios" src="/img/utensilios.jpg" alt="Utensílios de um barbeiro." />
+
+			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
+				para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
+				clientes a cada dia.</p>
+
+			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
+						clientes"</strong>.</em></p>
+
+			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui
+				padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+		</section>
+
+		<section class="beneficios">
+			<h3 class="titulo-principal">Benefícios</h3>
 
 			<ul>
 				<li class="itens">Atendimento aos Clientes</li>
@@ -31,7 +55,17 @@
 				<li class="itens">Profissionais Qualificados</li>
 			</ul>
 
-			<img src="img/beneficios.jpg" class="imagembeneficios">
-		</div>
-	</body>
+			<img src="/img/beneficios.jpg" class="imagembeneficios">
+		</section>
+
+	</main>
+
+	<footer>
+		<img src="./img/logo-branco.png">
+		<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+	</footer>
+
+</body>
+
+
 </html>
