--- a/Formação HTML e CSS/HTML5 e CSS3/index.html
+++ b/Formação HTML e CSS/HTML5 e CSS3/index.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Barbearia Alura</title>
-
+	<meta name="viewport" content="width=device-width">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="reset.css">
 </head>
@@ -28,7 +29,6 @@
 	<img class="banner" src="/img/banner.jpg">
 
 	<main>
-
 		<section class="principal">
 			<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
@@ -45,18 +45,42 @@
 				padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 		</section>
 
+		<section class="mapa">
+			<h3 class="titulo-principal">"Nosso estabelecimento</h3>
+			<p>Nosso estabelecimento está localizado no coração da cidade.</p>
+			<div class=".mapa-conteudo">
+				<iframe
+				src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1649.663259598249!2d-40.19391931635529!3d-10.454660884970016!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x76d58e600e852ef%3A0xf605888bb93233b4!2sR.%20Dom%20Ant%C3%B4nio%20Monteiro%2C%20240%20-%20Alto%20da%20Maravilha%2C%20Sr.%20do%20Bonfim%20-%20BA%2C%2048970-000!5e0!3m2!1spt-BR!2sbr!4v1592340953786!5m2!1spt-BR!2sbr"
+				width="70%" height="400px" frameborder="0" " allowfullscreen="" aria-hidden="false"
+				tabindex="0"></iframe>
+			</div>
+			
+
+		</section>
+
 		<section class="beneficios">
 			<h3 class="titulo-principal">Benefícios</h3>
 
-			<ul>
-				<li class="itens">Atendimento aos Clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais Qualificados</li>
-			</ul>
+			<div class="conteudo-beneficios">
+				<ul class="lista-beneficios">
+					<li class="itens">Atendimento aos Clientes</li>
+					<li class="itens">Espaço diferenciado</li>
+					<li class="itens">Localização</li>
+					<li class="itens">Profissionais Qualificados</li>
+					<li class="itens">Pontualidade</li>
+					<li class="itens">Limpeza</li>
+				</ul><img src="/img/beneficios.jpg" class="imagembeneficios">
+			</div>
 
-			<img src="/img/beneficios.jpg" class="imagembeneficios">
+			<div class="video">
+				<iframe width="95%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0"
+					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
+			</div>
+
 		</section>
+
+	
 
 	</main>
 
