--- a/Formação HTML e CSS/Acessibilidade web parte 1/index.html
+++ b/Formação HTML e CSS/Acessibilidade web parte 1/index.html
@@ -149,25 +149,25 @@
         </h2>
 
         <div class="secaoPlanos-plano secaoPlanos-plano--start">
-          <h2 class="secaoPlanos-plano-titulo">Start</h2>
-          <h3 class="secaoPlanos-plano-preco">
+          <h2 class="secaoPlanos-plano-titulo"> <span class="escondeVisualmente">Plano </span> Start</h2>
+          <span class="secaoPlanos-plano-preco">
             R$ 500
-          </h3>
+          </span>
           <ul class="secaoPlanos-plano-itens">
             <li>5 manutenções mensais</li>
             <li>App SEO</li>
             <li>1 sistema operacional</li>
           </ul>
           <a href="#" class="btnPadrao secaoPlanos-plano-btn">
-            Assinar plano
+            Assinar plano <span class="escondeVisualmente">Start por R$ 500,00</span>
           </a>
         </div>
 
         <div class="secaoPlanos-plano secaoPlanos-plano--ultra">
-          <h2 class="secaoPlanos-plano-titulo">Ultra</h2>
-          <h3 class="secaoPlanos-plano-preco">
+          <h2 class="secaoPlanos-plano-titulo"> <span class="escondeVisualmente">Plano </span>Ultra</h2>
+          <span class="secaoPlanos-plano-preco">
             R$ 1500
-          </h3>
+          </span>
           <ul class="secaoPlanos-plano-itens">
             <li>20 manutenções mensais</li>
             <li>App SEO</li>
@@ -175,22 +175,22 @@
             <li>24h de atendimento</li>
           </ul>
           <a href="#" class="btnPadrao secaoPlanos-plano-btn">
-            Assinar plano
+            Assinar plano <span class="escondeVisualmente">Ultra por R$ 1500 </span>
           </a>
         </div>
 
         <div class="secaoPlanos-plano secaoPlanos-plano--mega">
-          <h2 class="secaoPlanos-plano-titulo">Mega</h2>
-          <h3 class="secaoPlanos-plano-preco">
+          <h2 class="secaoPlanos-plano-titulo"> <span class="escondeVisualmente">Plano </span>Mega</h2>
+          <span class="secaoPlanos-plano-preco">
             R$ 1000
-          </h3>
+          </span>
           <ul class="secaoPlanos-plano-itens">
             <li>10 manutenções mensais</li>
             <li>App SEO</li>
             <li>2 sistemas operacionais</li>
           </ul>
           <a href="#" class="btnPadrao secaoPlanos-plano-btn">
-            Assinar plano
+            Assinar plano <span class="escondeVisualmente">Mega por R$ 1000</span>
           </a>
         </div>
 
@@ -309,10 +309,10 @@
             Assine nossa newsletter para receber notícias técnicas sem spam!
           </h3>
           <form class="dialogNewsletter-form">
-            <label class="dialogNewsletter-label">
+            <label class="dialogNewsletter-label" for="emailNewsletter"> 
               Email:
             </label>
-            <input type="text" class="dialogNewsletter-campo" placeholder="Digite seu e-mail...">
+            <input type="text" class="dialogNewsletter-campo" id="emailNewsletters" type="text" placeholder="Digite seu e-mail...">
             <button class="dialogNewsletter-btn">
               Assinar newsletter
             </button>
